--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.app-wrapper {
+    display: grid;
+    margin: 0 auto;
+    padding: 0;
+    width: 100%;
+    grid-template-areas:
+    "header header"
+    "nav content";
+    grid-template-rows: 2fr 18.5fr;
+    grid-template-columns: 1fr 8fr;
+    grid-gap: 10px;
+    background-color: #C4C4C4;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+    grid-area: header;
+    background-color: #655050;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header img {
+    width: 60px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.nav {
+    grid-area: nav;
+    background-color: #655050;
+    text-align: center;
 }
 
-.App-link {
-  color: #61dafb;
+.nav div {
+    margin: 0 3px 0 3px;
+    border: oldlace solid 2px;
+    margin-top: 10px;
+    border-radius: 6px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav a {
+    padding: 2px;
+    text-decoration: none;
+    color:#fff;
 }
+
+.content {
+    grid-area: content;
+    background-color: #BCACAC;
+}
+
