--- a/src/components/Profile/MyPosts/Post/Post.css
+++ b/src/components/Profile/MyPosts/Post/Post.css
@@ -1,4 +1,16 @@
-.content {
-    grid-area: content;
-    background-color: #F3EDED;
+.post span {
+    margin-left: 10px;
+}
+
+.post {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    
+}
+
+.post img {
+    border-radius: 100px;
+    width: 50px;
+    height: 50px;
 }
