--- a/src/components/Dialogs/Dialogs.css
+++ b/src/components/Dialogs/Dialogs.css
@@ -12,30 +12,14 @@
 .dialogs__items {
     padding: 10px;
     text-align: center;
+    border-right: #d3c5e8 solid 1px;
 }
 
 .dialogs__items .active {
     color: #7c63ca;
 }
 
-.dialog {
-    padding: 5px;
-    font-size: 19px;
-}
 
-.dialog a {
-    color: black;
-    text-decoration: none;
-}
 
-.message {
-    width: fit-content;
-    padding: 10px;
-    border-radius: 10px;
-}
 
-.message:hover {
-    transition: 0.5s ease-in-out;
-    background-color: #c4c4c4;
-}
 
