--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     grid-template-areas:
     "header header"
     "nav content";
-    grid-template-rows: 2fr 18.5fr;
+    grid-template-rows: 4em 1fr;
     grid-template-columns: 1fr 8fr;
     grid-gap: 10px;
     background-color: #fff;
